2008-02-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount
	-supportsQuotas]): test quota support by querying the server
	capability.

2008-02-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -acceptAction])
	([UIxMailPartICalActions -declineAction]): define the organizer of
	the event as one of the reply-to or from addresses whenever the
	organizer is not specified in those Outlook invitations.

2008-02-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailMainFrame.m ([UIxMailMainFrame
	-quotaSupport]): new json string that lists the quota support
	among the user's mail accounts.

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount
	-supportsQuotas]): new method that returns whether the current
	account server has support for quotas.

2008-01-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	-davSetProperties:setPropsremovePropertiesNamed:removedPropsinContext:localContext]):
	new method that takes the displayname into account.

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder
	-davCreateCollection:pathInfoinContext:localContext]): new method
	that acts as a proxy to newFolderWithName:andNameInContainer:.

2008-01-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-takeValuesFromRequest:_rqinContext:_ctx]): make use of the <<
	operator to handle the day masks in custom rules.

2008-01-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser
	+userWithLogin:newLoginroles:newRoles]): test if the user is well
	initialized before registering it with the SOGo cache.
	([SOGoUser -initWithLogin:newLoginroles:newRoles]): returns a user
	only if the realUID has been found, otherwise we dealloc self and
	return nil.

	* SoObjects/Appointments/SOGoAppointmentFolder.m: if c_cycleinfo